--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -1,10 +1,14 @@
-<h1>Ничего не найдено</h1>
+<main>
 
-<img src="/assets/img/404.svg" alt="Ничего не найлен" />
+  <h1>Ничего не найдено</h1>
 
-<p>По вашему запросу не было найдено никакого результат</p>
+  <img src="/assets/img/404.svg" alt="Ничего не найлен" />
 
-<div class="control-panel">
-  <button mat-raised-button color="primary" (click)="previousPage()">Назад</button>
-  <button mat-raised-button color="primary" (click)="navigateHomePage()">На главную</button>
-</div>
+  <p>По вашему запросу не было найдено никакого результат</p>
+
+  <div class="control-panel">
+    <button mat-raised-button color="primary" (click)="previousPage()">Назад</button>
+    <button mat-raised-button color="primary" (click)="navigateHomePage()">На главную</button>
+  </div>
+
+</main>
