--- a/src/app/pages/offer-page/offer-page.component.scss
+++ b/src/app/pages/offer-page/offer-page.component.scss
@@ -1,30 +1,71 @@
-.offer-title {
-  display: flex;
-  align-items: center;
-  margin-top: 3em;
+$main-theme-color: #2E7990;
 
-  img {
-    max-width: 40px;
-    max-height: 40px;
-    border-radius: 50%;
-    margin-right: 1em;
+main {
+  grid-template-columns: 1.5fr 2.5fr;
+}
+
+.offer-info-card{
+  display: flex;
+  flex-direction: column;
+  height: min-content;
+
+  background-color: #fff;
+  box-shadow: inset -4px -4px 10px rgba(228, 246, 255, 0.2), inset 4px 4px 10px #FCFFFF, inset -4px 4px 10px rgba(228, 246, 255, 0.25), inset 4px -4px 10px #E4F6FF, inset -1px 4px 10px #E4F6FF, inset 1px -4px 10px #FCFFFF;
+  border-radius: 5px;
+  padding: 2.5em 2em;
+
+  .avatar-name-block {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 2em;
+
+    .avatar-container {
+      margin-bottom: 1em;
+    }
   }
 
-  h2 {
-    margin: 0;
+  .item {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    & > span {
+      max-width: 45%;
+    }
+
+    & > span:nth-of-type(1) {
+      white-space: nowrap;
+    }
+
+    & > span:nth-of-type(2) {
+      font-family: 'Raleway-SemiBold';
+      text-align: right;
+    }
+
+    &:not(:last-child) {
+      margin-bottom: 1.5em;
+    }
   }
 }
 
-.offer-meta-data,
-.offer-main-data,
-.offer-contact-data{
-  display: grid;
-  grid-template: auto / 1fr 1fr;
-  grid-gap: 1em;
-  margin: 1.25em auto;
+.offer-main-data{
 
-  .full-width-block,
-  hr{
-    grid-column: 1/3;
+  h2 {
+    margin-bottom: 2.5em;
+  }
+
+  & > div:not(:last-child) {
+    margin-bottom: 2em;
+  }
+
+  .contacts span{
+    width: 100%;
+  }
+
+  button {
+    float: right;
   }
 }
