nav buttons added to header & footer

--- a/src/app/template-blocks/footer/footer.component.html
+++ b/src/app/template-blocks/footer/footer.component.html
@@ -10,6 +10,11 @@
       <p>BizMate &copy; 2020</p>
     </div>
 
+    <div class="nav-buttons">
+      <a [routerLink]="['/']">Главная</a>
+      <a [routerLink]="['/offers-page']">Оффреы</a>
+    </div>
+
     <div class="email_and_offer_button">
       <p>info@bizmate.ru</p>
       <button class="button-primary button-transparent" [routerLink]="['/new-offer']">Разместить объявление</button>
