--- a/src/app/template-blocks/footer/footer.component.scss
+++ b/src/app/template-blocks/footer/footer.component.scss
@@ -46,6 +46,27 @@ footer {
       }
     }
 
+    .nav-buttons {
+      flex-direction: row;
+      align-items: center;
+
+      a{
+        font-family: 'Raleway-SemiBold';
+        cursor: pointer;
+        margin: 0 20px;
+        color: #FFF;
+        text-decoration: none;
+      }
+
+      a:first-child {
+        margin-left: 0;
+      }
+
+      a:last-child {
+        margin-right: 0;
+      }
+    }
+
 
     .email_and_offer_button {
       align-items: flex-end;
