--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -49,38 +49,12 @@
   }
 }
 
-.search-form-panel{
-  margin: 4em auto 3em;
-
-  h3 {
-    text-align: center;
-    font-size: 20px;
-    font-family: 'Raleway-SemiBold';
-  }
-
-  form {
-    display: grid;
-    grid-template: auto / 1fr 1fr;
-    grid-gap: 0 1em;
-
-    mat-form-field:nth-of-type(1) {
-      grid-column: 1/3;
-    }
-
-    & > div {
-      grid-column-start: 2;
-      display: flex;
-      justify-content: space-between;
-
-      button {
-        width: 40%;
-      }
-    }
-  }
-}
-
-
 .offers-block{
+  margin-top: 6em;
+
+  h2 {
+    text-align: center;
+  }
 
   .more-offers{
     display: table;
@@ -89,4 +63,23 @@
   }
 }
 
+
+.about-platform-block {
+  margin-bottom: 5em;
+
+  h2 {
+    margin-bottom: 2em;
+  }
+
+  p:nth-of-type(2) {
+    margin-top: 2em;
+    margin-bottom: 3em;
+  }
+
+  img {
+    display: block;
+    width: 150px;
+    margin: auto;
+  }
+}
 
