--- a/src/styles.scss
+++ b/src/styles.scss
@@ -145,6 +145,7 @@ input.mat-input-element{
   font-size: 14px;
   padding: 0 0 .25em;
   cursor: pointer;
+  text-decoration: none;
   border-bottom: .75px solid #2E7990;
 }
 
