phone mask & prefered contacts added

--- a/src/app/pages/home-page/home-page.component.scss
+++ b/src/app/pages/home-page/home-page.component.scss
@@ -8,6 +8,7 @@
     width: 65%;
     min-width: 350px;
     max-width: 650px;
+    z-index: 1;
 
     p:nth-of-type(1) {
       font-family: 'Raleway-Light';
