--- a/src/app/pages/profile-page/profile-page.component.html
+++ b/src/app/pages/profile-page/profile-page.component.html
@@ -48,7 +48,7 @@
     <ng-container *ngIf="!userOffers$">
       <div class="no-offers-block">
         <p>Размещенных офферов нет</p>
-        <button mat-raised-button color="primary" [routerLink]="'/new-offer'">Разместить оффер</button>
+        <button class="button-primary button-primary-large" [routerLink]="'/new-offer'">Разместить оффер</button>
       </div>
     </ng-container>
   </section>
