--- a/src/app/template-blocks/offer-card/offer-card.component.scss
+++ b/src/app/template-blocks/offer-card/offer-card.component.scss
@@ -30,6 +30,7 @@
         max-height: 44px;
         overflow: hidden;
         text-overflow: ellipsis;
+        cursor: pointer;
       }
 
       span {
