--- a/src/app/pages/offer-form/offer-form.component.scss
+++ b/src/app/pages/offer-form/offer-form.component.scss
@@ -55,6 +55,31 @@ main {
     min-height: 100px;
     overflow: hidden !important;
   }
+
+  .prefered-contact-methods{
+    & > div {
+      margin-top: .5em;
+      display: flex;
+      justify-content: left;
+      align-items: center;
+      flex-wrap: wrap;
+
+      img {
+        height: 25px;
+        width: 25px;
+        cursor: pointer;
+        margin: 0 .75em;
+      }
+
+      img:first-child{
+        margin-left: 0 !important;
+      }
+
+      img:last-child{
+        margin-right: 0 !important;
+      }
+    }
+  }
 }
 
 mat-checkbox {
