--- a/src/app/pages/offer-page/offer-page.component.scss
+++ b/src/app/pages/offer-page/offer-page.component.scss
@@ -61,9 +61,37 @@ main {
     margin-bottom: 2em;
   }
 
-  .contacts span{
-    width: 100%;
+  .contacts {
+    .prefered-contact-methods{
+      & > div {
+        margin-top: .5em;
+        display: flex;
+        justify-content: left;
+        align-items: center;
+        flex-wrap: wrap;
+
+        img {
+          height: 25px;
+          width: 25px;
+          cursor: pointer;
+          margin: 0 .75em;
+        }
+
+        img:first-child{
+          margin-left: 0 !important;
+        }
+
+        img:last-child{
+          margin-right: 0 !important;
+        }
+      }
+    }
+
+    &>span {
+      width: 100%;
+    }
   }
+
 
   button {
     float: right;
