--- a/src/app/template-blocks/notification-bar/notification-bar.component.scss
+++ b/src/app/template-blocks/notification-bar/notification-bar.component.scss
@@ -6,9 +6,9 @@
   padding: 30px 0;
   background-color: white;
   z-index: 2147483647;
-  -webkit-box-shadow: 0 8px 6px -6px black;
-  -moz-box-shadow: 0 8px 6px -6px black;
-  box-shadow: 0 8px 6px -6px black;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
   .error-message,
   .success-message {
@@ -16,10 +16,7 @@
     margin: 0 auto;
     font-size: 16px;
     text-align: center;
-  }
-
-  .success-message {
-    color: green;
+    font-family: 'Raleway-SemiBold';
   }
 
   .error-message {
