feedback page resolved

--- a/src/app/template-blocks/footer/footer.component.html
+++ b/src/app/template-blocks/footer/footer.component.html
@@ -13,6 +13,7 @@
     <div class="nav-buttons">
       <a [routerLink]="['/']">Главная</a>
       <a [routerLink]="['/offers-page']">Оффреы</a>
+      <a [routerLink]="['/feedback']">Помощь</a>
     </div>
 
     <div class="email_and_offer_button">
