--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -8,8 +8,7 @@
       <button class="button-primary button-primary-large" [routerLink]="['/new-offer']">Разместить предложение</button>
     </div>
 
-    <div class="image-block">
-    </div>
+    <div class="image-block"></div>
   </div>
 
   <section class="offers-block">
