--- a/src/app/pages/offer-form/offer-form.component.html
+++ b/src/app/pages/offer-form/offer-form.component.html
@@ -8,11 +8,10 @@
 
   <section *ngIf="isOfferLoaded">
     <form class="new-offer-form" [formGroup]="newOfferForm">
-
-      <h3>Общая информация</h3>
-
-      <button class="button-primary button-white clear-form-btn" (click)="clearForm()">Очистить
-      </button>
+      <div class="header-and-clear full-width-field">
+        <h3>Общая информация</h3>
+        <button class="button-primary button-white clear-form-btn" (click)="clearForm()">Очистить</button>
+      </div>
 
       <mat-form-field>
         <input type="text" placeholder="Населенный пункт" aria-label="Населенный пункт" matInput
