--- a/src/app/pages/offers-page/offers-page.component.html
+++ b/src/app/pages/offers-page/offers-page.component.html
@@ -1,8 +1,13 @@
 <main>
 
   <div class="highlight-box search-form-panel">
-    <h3>Поиск офферов</h3>
-    <form [formGroup]="searchForm">
+    <div>
+      <h3>Поиск офферов</h3>
+      <img src="/assets/img/bold_arrow.svg" alt="Скрыть/Показать меню"
+           (click)="isSearchFormVisible = !isSearchFormVisible" [ngClass]="isSearchFormVisible ? 'transform-arrow': null"/>
+    </div>
+    <!-- Desktop form -->
+    <form class="desktop-form" [formGroup]="searchForm">
       <mat-form-field>
         <mat-label>Поиск по названию</mat-label>
         <input matInput placeholder="Мастшабирование бизнеса" formControlName="titleFilter">
@@ -34,6 +39,41 @@
         <button class="button-primary" (click)="applyFilter()">Искать</button>
       </div>
     </form>
+
+    <!-- Mobile form -->
+    <form class="mobile-form" *ngIf="isSearchFormVisible" [formGroup]="searchForm">
+      <mat-form-field>
+        <mat-label>Поиск по названию</mat-label>
+        <input matInput placeholder="Мастшабирование бизнеса" formControlName="titleFilter">
+      </mat-form-field>
+
+      <mat-form-field>
+        <input type="text" placeholder="Сфера бизнеса" aria-label="Сфера бизнеса" matInput
+               formControlName="businessAreaFilter" [matAutocomplete]="businessArea">
+        <mat-autocomplete #businessArea="matAutocomplete">
+          <mat-option *ngFor="let category of filteredBusinessArea$ | async" [value]="category.name">
+            {{category.name}}
+          </mat-option>
+        </mat-autocomplete>
+      </mat-form-field>
+
+
+      <mat-form-field>
+        <input type="text" placeholder="Населенный пункт" aria-label="Населенный пункт" matInput
+               formControlName="cityFilter" [matAutocomplete]="cities">
+        <mat-autocomplete #cities="matAutocomplete">
+          <mat-option *ngFor="let city of filteredCities$ | async" [value]="city.name">
+            {{city.name}}
+          </mat-option>
+        </mat-autocomplete>
+      </mat-form-field>
+
+      <div>
+        <button class="button-primary button-white" (click)="clearFilterForm()">Сбросить</button>
+        <button class="button-primary" (click)="applyFilter()">Искать</button>
+      </div>
+    </form>
+
   </div>
 
   <div class="offers-list">
