--- a/src/app/pages/offers-page/offers-page.component.scss
+++ b/src/app/pages/offers-page/offers-page.component.scss
@@ -1,14 +1,28 @@
 .search-form-panel{
-  margin: 4em auto 3em;
+  margin: 2em auto;
 
-  h3 {
-    text-align: center;
-    font-size: 20px;
-    font-family: 'Raleway-SemiBold';
+  &>div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    h3 {
+      text-align: center;
+      font-size: 20px;
+      font-family: 'Raleway-SemiBold';
+    }
+
+    img {
+      width: 20px;
+      display: none;
+    }
+
+    .transform-arrow {
+      transform: rotateX(180deg);
+    }
   }
 
   form {
-    display: grid;
     grid-template: auto / 1fr 1fr;
     grid-gap: 0 1em;
 
@@ -17,13 +31,61 @@
     }
 
     & > div {
-      grid-column-start: 2;
+      grid-column: 2/3;
       display: flex;
       justify-content: space-between;
 
       button {
         width: 40%;
       }
+    }
+  }
+
+  .desktop-form {
+    display: grid;
+  }
+
+  .mobile-form {
+    display: none;
+  }
+
+  @media screen and (max-width: 770px) {
+    margin: 2em auto -1em;
+
+    &>div {
+      justify-content: space-between;
+
+      h3 {
+        font-size: 16px;
+        text-align: left;
+      }
+
+      img {
+        display: initial;
+      }
+    }
+
+
+    form {
+      display: none;
+      grid-template: auto / 1fr;
+      grid-gap: 0 .5em;
+
+      mat-form-field:nth-of-type(1), & > div {
+        grid-column: unset;
+      }
+
+      & > div > button {
+        width: 45%;
+      }
+    }
+
+    .desktop-form {
+      display: none;
+    }
+
+    .mobile-form {
+      display: grid;
     }
   }
 }
