offers search form updated

--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -7,8 +7,8 @@
   <p>По вашему запросу не было найдено никакого результат</p>
 
   <div class="control-panel">
-    <button mat-raised-button color="primary" (click)="previousPage()">Назад</button>
-    <button mat-raised-button color="primary" (click)="navigateHomePage()">На главную</button>
+    <button class="button-primary button-white" (click)="previousPage()">Назад</button>
+    <button class="button-primary" (click)="navigateHomePage()">На главную</button>
   </div>
 
 </main>
