--- a/src/app/pages/not-found/not-found.component.scss
+++ b/src/app/pages/not-found/not-found.component.scss
@@ -3,6 +3,10 @@ $main-theme-color: #2E7990;
 h1 {
   text-align: center;
   color: $main-theme-color;
+
+  @media screen and (max-width: 770px) {
+    font-size: 28px;
+  }
 }
 
 img {
