--- a/src/app/pages/offers-page/offers-page.component.scss
+++ b/src/app/pages/offers-page/offers-page.component.scss
@@ -24,16 +24,12 @@
 
   form {
     grid-template: auto / 1fr 1fr;
-    grid-gap: 0 1em;
-
-    mat-form-field:nth-of-type(1) {
-      grid-column: 1/3;
-    }
+    grid-gap: 0 3em;
 
     & > div {
-      grid-column: 2/3;
       display: flex;
       justify-content: space-between;
+      align-items: center;
 
       button {
         width: 40%;
@@ -71,9 +67,6 @@
       grid-template: auto / 1fr;
       grid-gap: 0 .5em;
 
-      mat-form-field:nth-of-type(1), & > div {
-        grid-column: unset;
-      }
 
       & > div > button {
         width: 45%;
@@ -87,6 +80,28 @@
     .mobile-form {
       display: grid;
     }
+  }
+}
+
+.empty-filter-result {
+  max-width: 650px;
+  min-width: 400px;
+  width: 50%;
+  margin: 4em auto 3em;
+  text-align: center;
+
+  img {
+    width: 200px;
+  }
+
+  p {
+    line-height: 22px;
+  }
+
+  @media screen and (max-width: 770px) {
+    width: calc(90% - 3em);
+    min-width: unset;
+    margin: 3em auto;
   }
 }
 
