--- a/src/app/template-blocks/footer/footer.component.html
+++ b/src/app/template-blocks/footer/footer.component.html
@@ -22,4 +22,7 @@
     </div>
   </div>
 
+  <div class="rules-link">
+    <a [routerLink]="['/rules']">Правила размещения объявлений</a>
+  </div>
 </footer>
